// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RoleCreateEdit Snapshot Tests matches snapshot after dirty form cancel (dialog opened via hook) 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_176613814608779rumjj7r2d
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class=MuiTypography-root MuiTypography-headline whitespace-pre-line css-hash-MuiTypography-root
            data-test="headline"
          >
            text_176613814608779rumjj7r2d
          </div>
          <div
            class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
            data-test="body"
          >
            text_176613820114657nlabp19lm
          </div>
        </div>
        <div
          class="flex flex-col gap-6 pb-12 shadow-b"
        >
          <div
            class="flex flex-col gap-1"
          >
            <div
              class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
              data-test="subhead1"
            >
              text_1767012423699qiisp5z4jqy
            </div>
            <div
              class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
              data-test="body"
            >
              text_1767013866975h2lgwgojt4s
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-6"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="name"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d38091
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="name"
                    name="name"
                    placeholder="text_629728388c4d2300e2d380a5"
                    type="text"
                    value="Test"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="code"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d380b7
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="code"
                    name="code"
                    placeholder="text_629728388c4d2300e2d380d9"
                    type="text"
                    value="test"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <div
              class="flex items-center gap-1"
            >
              <label
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
                for="description"
              >
                <span
                  class="flex flex-row gap-1"
                >
                  text_6388b923e514213fed58331c
                  <div
                    class=MuiTypography-root MuiTypography-caption whitespace-pre-line css-hash-MuiTypography-root
                    data-test="caption"
                  >
                    - 
                    text_17661418227616cvcuga1x7m
                  </div>
                </span>
              </label>
            </div>
            <div
              class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
            >
              <div
                class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-multiline css-hash-MuiInputBase-root-MuiOutlinedInput-root
              >
                <textarea
                  aria-invalid="false"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  id="description"
                  name="description"
                  placeholder="text_176614189875029z5fbpnkne"
                  style="height: 10px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                >
                  <legend
                    class=css-hash-MuiNotchedOutlined-root
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-test="role-permissions-form"
        >
          Permissions Form
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1766138146087w2ax628r6j1
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;

exports[`RoleCreateEdit Snapshot Tests matches snapshot after filling form 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_176613814608779rumjj7r2d
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class=MuiTypography-root MuiTypography-headline whitespace-pre-line css-hash-MuiTypography-root
            data-test="headline"
          >
            text_176613814608779rumjj7r2d
          </div>
          <div
            class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
            data-test="body"
          >
            text_176613820114657nlabp19lm
          </div>
        </div>
        <div
          class="flex flex-col gap-6 pb-12 shadow-b"
        >
          <div
            class="flex flex-col gap-1"
          >
            <div
              class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
              data-test="subhead1"
            >
              text_1767012423699qiisp5z4jqy
            </div>
            <div
              class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
              data-test="body"
            >
              text_1767013866975h2lgwgojt4s
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-6"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="name"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d38091
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="name"
                    name="name"
                    placeholder="text_629728388c4d2300e2d380a5"
                    type="text"
                    value="New Role"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="code"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d380b7
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="code"
                    name="code"
                    placeholder="text_629728388c4d2300e2d380d9"
                    type="text"
                    value="new_rolenew_role"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <div
              class="flex items-center gap-1"
            >
              <label
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
                for="description"
              >
                <span
                  class="flex flex-row gap-1"
                >
                  text_6388b923e514213fed58331c
                  <div
                    class=MuiTypography-root MuiTypography-caption whitespace-pre-line css-hash-MuiTypography-root
                    data-test="caption"
                  >
                    - 
                    text_17661418227616cvcuga1x7m
                  </div>
                </span>
              </label>
            </div>
            <div
              class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
            >
              <div
                class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl MuiInputBase-multiline css-hash-MuiInputBase-root-MuiOutlinedInput-root
              >
                <textarea
                  aria-invalid="false"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  id="description"
                  name="description"
                  placeholder="text_176614189875029z5fbpnkne"
                  style="height: 10px; overflow: hidden;"
                >
                  A new custom role
                </textarea>
                <textarea
                  aria-hidden="true"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                >
                  <legend
                    class=css-hash-MuiNotchedOutlined-root
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-test="role-permissions-form"
        >
          Permissions Form
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1766138146087w2ax628r6j1
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;

exports[`RoleCreateEdit Snapshot Tests matches snapshot in create mode 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_176613814608779rumjj7r2d
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class=MuiTypography-root MuiTypography-headline whitespace-pre-line css-hash-MuiTypography-root
            data-test="headline"
          >
            text_176613814608779rumjj7r2d
          </div>
          <div
            class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
            data-test="body"
          >
            text_176613820114657nlabp19lm
          </div>
        </div>
        <div
          class="flex flex-col gap-6 pb-12 shadow-b"
        >
          <div
            class="flex flex-col gap-1"
          >
            <div
              class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
              data-test="subhead1"
            >
              text_1767012423699qiisp5z4jqy
            </div>
            <div
              class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
              data-test="body"
            >
              text_1767013866975h2lgwgojt4s
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-6"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="name"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d38091
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="name"
                    name="name"
                    placeholder="text_629728388c4d2300e2d380a5"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="code"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d380b7
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="code"
                    name="code"
                    placeholder="text_629728388c4d2300e2d380d9"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <div
              class="flex items-center gap-1"
            >
              <label
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
                for="description"
              >
                <span
                  class="flex flex-row gap-1"
                >
                  text_6388b923e514213fed58331c
                  <div
                    class=MuiTypography-root MuiTypography-caption whitespace-pre-line css-hash-MuiTypography-root
                    data-test="caption"
                  >
                    - 
                    text_17661418227616cvcuga1x7m
                  </div>
                </span>
              </label>
            </div>
            <div
              class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
            >
              <div
                class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-multiline css-hash-MuiInputBase-root-MuiOutlinedInput-root
              >
                <textarea
                  aria-invalid="false"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  id="description"
                  name="description"
                  placeholder="text_176614189875029z5fbpnkne"
                  style="height: 10px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                >
                  <legend
                    class=css-hash-MuiNotchedOutlined-root
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-test="role-permissions-form"
        >
          Permissions Form
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1766138146087w2ax628r6j1
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;

exports[`RoleCreateEdit Snapshot Tests matches snapshot in duplicate mode 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_176613814608779rumjj7r2d
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class=MuiTypography-root MuiTypography-headline whitespace-pre-line css-hash-MuiTypography-root
            data-test="headline"
          >
            text_176613814608779rumjj7r2d
          </div>
          <div
            class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
            data-test="body"
          >
            text_176613820114657nlabp19lm
          </div>
        </div>
        <div
          class="flex flex-col gap-6 pb-12 shadow-b"
        >
          <div
            class="flex flex-col gap-1"
          >
            <div
              class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
              data-test="subhead1"
            >
              text_1767012423699qiisp5z4jqy
            </div>
            <div
              class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
              data-test="body"
            >
              text_1767013866975h2lgwgojt4s
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-6"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="name"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d38091
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="name"
                    name="name"
                    placeholder="text_629728388c4d2300e2d380a5"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="code"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d380b7
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="code"
                    name="code"
                    placeholder="text_629728388c4d2300e2d380d9"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <div
              class="flex items-center gap-1"
            >
              <label
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
                for="description"
              >
                <span
                  class="flex flex-row gap-1"
                >
                  text_6388b923e514213fed58331c
                  <div
                    class=MuiTypography-root MuiTypography-caption whitespace-pre-line css-hash-MuiTypography-root
                    data-test="caption"
                  >
                    - 
                    text_17661418227616cvcuga1x7m
                  </div>
                </span>
              </label>
            </div>
            <div
              class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
            >
              <div
                class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-multiline css-hash-MuiInputBase-root-MuiOutlinedInput-root
              >
                <textarea
                  aria-invalid="false"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  id="description"
                  name="description"
                  placeholder="text_176614189875029z5fbpnkne"
                  style="height: 10px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                >
                  <legend
                    class=css-hash-MuiNotchedOutlined-root
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-test="role-permissions-form"
        >
          Permissions Form
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1766138146087w2ax628r6j1
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;

exports[`RoleCreateEdit Snapshot Tests matches snapshot in edit mode 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_1766138146087vq4eqb2moza
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class=MuiTypography-root MuiTypography-headline whitespace-pre-line css-hash-MuiTypography-root
            data-test="headline"
          >
            text_1766138146087vq4eqb2moza
          </div>
          <div
            class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
            data-test="body"
          >
            text_176613820114657nlabp19lm
          </div>
        </div>
        <div
          class="flex flex-col gap-6 pb-12 shadow-b"
        >
          <div
            class="flex flex-col gap-1"
          >
            <div
              class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
              data-test="subhead1"
            >
              text_1767012423699qiisp5z4jqy
            </div>
            <div
              class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
              data-test="body"
            >
              text_1767013866975h2lgwgojt4s
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-6"
          >
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="name"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d38091
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    id="name"
                    name="name"
                    placeholder="text_629728388c4d2300e2d380a5"
                    type="text"
                    value="Test Role"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <div
                class="flex items-center gap-1"
              >
                <label
                  class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                  data-test="captionHl"
                  for="code"
                >
                  <span
                    class="flex flex-row gap-1"
                  >
                    text_629728388c4d2300e2d380b7
                  </span>
                </label>
              </div>
              <div
                class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
              >
                <div
                  class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
                >
                  <input
                    aria-invalid="false"
                    class=MuiInputBase-input MuiOutlinedInput-input Mui-disabled css-hash-MuiInputBase-input-MuiOutlinedInput-input
                    disabled=""
                    id="code"
                    name="code"
                    placeholder="text_629728388c4d2300e2d380d9"
                    type="text"
                    value="test_role"
                  />
                  <fieldset
                    aria-hidden="true"
                    class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                  >
                    <legend
                      class=css-hash-MuiNotchedOutlined-root
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-1"
          >
            <div
              class="flex items-center gap-1"
            >
              <label
                class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
                data-test="captionHl"
                for="description"
              >
                <span
                  class="flex flex-row gap-1"
                >
                  text_6388b923e514213fed58331c
                  <div
                    class=MuiTypography-root MuiTypography-caption whitespace-pre-line css-hash-MuiTypography-root
                    data-test="caption"
                  >
                    - 
                    text_17661418227616cvcuga1x7m
                  </div>
                </span>
              </label>
            </div>
            <div
              class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
            >
              <div
                class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-multiline css-hash-MuiInputBase-root-MuiOutlinedInput-root
              >
                <textarea
                  aria-invalid="false"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  id="description"
                  name="description"
                  placeholder="text_176614189875029z5fbpnkne"
                  style="height: 10px; overflow: hidden;"
                >
                  Test role description
                </textarea>
                <textarea
                  aria-hidden="true"
                  class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-hash-MuiInputBase-input-MuiOutlinedInput-input
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
                >
                  <legend
                    class=css-hash-MuiNotchedOutlined-root
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-test="role-permissions-form"
        >
          Permissions Form
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1765528921745ibx4b56q1mt
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;

exports[`RoleCreateEdit Snapshot Tests matches snapshot in loading state 1`] = `
<div>
  <div
    class="flex size-full min-h-full flex-col overflow-auto bg-white"
    data-centered-page-wrapper="true"
  >
    <form
      class="flex min-h-full flex-col"
      id="role-create-edit-form"
    >
      <header
        class="sticky top-0 z-navBar flex h-nav items-center justify-between gap-2 bg-white p-4 shadow-b md:px-12"
      >
        <div
          class=MuiTypography-root MuiTypography-bodyHl MuiTypography-noWrap css-hash-MuiTypography-root
          data-test="bodyHl"
        >
          text_176613814608779rumjj7r2d
        </div>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="button"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-inherit size-4 min-w-4"
            data-test="close/medium"
            fill="currentColor"
            title="close/medium"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.58847 8.00421L0.295157 1.7059C0.108808 1.51844 0.00421143 1.26485 0.00421143 1.00053C0.00421143 0.736203 0.108808 0.482618 0.295157 0.295157C0.482618 0.108808 0.736203 0.00421143 1.00053 0.00421143C1.26485 0.00421143 1.51844 0.108808 1.7059 0.295157L8.00421 6.58847L14.3025 0.295157C14.49 0.108808 14.7436 0.00421143 15.0079 0.00421143C15.2722 0.00421143 15.5258 0.108808 15.7133 0.295157C15.8996 0.482618 16.0042 0.736203 16.0042 1.00053C16.0042 1.26485 15.8996 1.51844 15.7133 1.7059L9.41996 8.00421L15.7133 14.3025C15.8772 14.4939 15.9628 14.7401 15.9531 14.9919C15.9434 15.2437 15.839 15.4826 15.6608 15.6608C15.4826 15.839 15.2437 15.9434 14.9919 15.9531C14.7401 15.9628 14.4939 15.8772 14.3025 15.7133L8.00421 9.41996L1.7059 15.7133C1.51844 15.8996 1.26485 16.0042 1.00053 16.0042C0.736203 16.0042 0.482618 15.8996 0.295157 15.7133C0.108808 15.5258 0.00421143 15.2722 0.00421143 15.0079C0.00421143 14.7436 0.108808 14.49 0.295157 14.3025L6.58847 8.00421Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="mx-auto flex w-full max-w-170 flex-1 flex-col gap-12 px-4 pb-footer pt-12 md:px-0"
      >
        <div
          class="flex flex-col gap-1"
        >
          <div
            class="flex max-w-full items-center h-8 w-40"
          >
            <div
              class="animate-pulse bg-grey-100 h-3 rounded-3xl w-40"
            />
          </div>
          <div
            class="flex max-w-full items-center h-6 w-100"
          >
            <div
              class="animate-pulse bg-grey-100 h-3 rounded-3xl w-100"
            />
          </div>
        </div>
        <div>
          <div
            class="flex flex-col gap-1 pb-12 shadow-b"
          >
            <div
              class="flex max-w-full items-center h-6 w-40"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-40"
              />
            </div>
            <div
              class="flex max-w-full items-center h-6 w-100"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-100"
              />
            </div>
            <div
              class="flex max-w-full items-center h-6 w-74"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-74"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="flex flex-col gap-1 pb-12 shadow-b"
          >
            <div
              class="flex max-w-full items-center h-6 w-40"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-40"
              />
            </div>
            <div
              class="flex max-w-full items-center h-6 w-100"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-100"
              />
            </div>
            <div
              class="flex max-w-full items-center h-6 w-74"
            >
              <div
                class="animate-pulse bg-grey-100 h-3 rounded-3xl w-74"
              />
            </div>
          </div>
        </div>
      </div>
      <footer
        class="sticky bottom-0 z-navBar w-full bg-white shadow-t"
      >
        <div
          class="mx-auto flex min-h-footer w-full max-w-170 flex-wrap-reverse items-center justify-end gap-3 px-4 md:px-0"
        >
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="button"
            tabindex="0"
            type="button"
          >
            text_62e79671d23ae6ff149de968
          </button>
          <button
            class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
            data-test="submit-role-button"
            tabindex="0"
            type="submit"
          >
            text_1766138146087w2ax628r6j1
          </button>
        </div>
      </footer>
    </form>
  </div>
</div>
`;
